--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.13",
     "@angular/common": "^20.0.0-next.0",
     "@angular/compiler": "^20.0.0-next.0",
     "@angular/core": "^20.0.0-next.0",
