--- a/package.json
+++ b/package.json
@@ -1,37 +1,32 @@
 {
-  "name": "tamizh-travels",
-  "version": "0.0.0",
+  "name": "angular-starter",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "ng build"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.13",
-    "@angular/common": "^20.0.0-next.0",
-    "@angular/compiler": "^20.0.0-next.0",
-    "@angular/core": "^20.0.0-next.0",
-    "@angular/forms": "^20.0.0-next.0",
-    "@angular/platform-browser": "^20.0.0-next.0",
-    "@angular/router": "^20.0.0-next.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "@angular/animations": "^20.0.0",
+    "@angular/cdk": "^20.0.5",
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/router": "^20.0.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "rxjs": "^7.8.1",
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.5.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.0.0-rc.3",
-    "@angular/cli": "^20.0.0-rc.3",
-    "@angular/compiler-cli": "^20.0.0-next.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.7.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "@angular/build": "^20.0.0",
+    "@angular/cli": "^20.0.0",
+    "@angular/compiler-cli": "^20.0.0",
+    "typescript": "^5.8.2"
   }
 }
